27-02-19

Reports with the same name will overwrite, Brokasure XML export and import work

26-02-19

encode all of the json or newer versions of tomcat will complain in js tree

bug fix which will refresh the permissions even when looking up a user that's logged in previously, this needs work

21-02-19

new syntax of 'applies to'. If a single name is specified (e.g. `Contract Reference` - this is now taken to mean `Contract reference` level lowest

Tidying, bug fix to batch importer when name for attribute in composite is blank, bug fix when deleting databases, started on report based use of dictionary, Excel controller doensn't show the home menu as a linkable menu

'valueset' adjusted to ignore attribute headings, and use pre-compiled set on the dataRegionHeading if available

New message of "no data" if the file has the correct structure but is blank

18-02-19

Manually add to pending uploads

With conditional on composite values - if(condition, iftrue, iffalse)

Allow downloading of the warnings for a pending upload which can be modified and then uploaded

13-02-19

Import templates linked to databases and backups, improved progress feedback during import/validation, reject button working, concurrent modification check, broaksure XML export changes

08-02-19

attributes allow commas

tidying, Excel plugin work

07-02-19

Case insensitive choices - allow dec-18 if a list has Dec-18, latest MySQL driver, double check query names are ordered, properties for new Ed Broking windows server

SHould be improved error messages

05-02-19

Single import process work. UI improvements, zip feedback, list pending uploads based on the user's team

with new 'provisional' clause (provisional = only insert into set if not already categorised as some other element of the set)

Does not import hidden sheets

01-02-19

Pending uploads optimizeation, UI tweaks, Region size limit pushed to 5 million for big risk data summary

23-01-19
